# bleTones

./: .gitignore  CMakeLists.txt  Info.plist  LICENSE  PLATFORM_LIMITATIONS.md  PR_SUMMARY.txt  PYTHON_ARCHIVE.md  QUICKSTART.md  README.md  RELEASE_INSTRUCTIONS.md  RELEASE_NOTES.md  SOLUTION.md  TESTING_GUIDE.md  XCODE_SETUP.md  create-release.sh  electron.html  flavor-ambient.scd  flavor-ethereal.scd  flavor-percussive.scd  flavor-rhythmic.scd  index.html  main.js  main.py  package-lock.json  package.json  preload.js  requirements.txt  sprites.scd  start.bat  start.sh  woods.scd
.github/workflows/: build.yml
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
archive/: bridge.py  woods.scd
archive/meh maybe?/: bridge.py  sines.scd
archive/not bad/: sines.scd
archive/sorta works/: ble to sound.scd  readme.rtf
bleTones/: Info.plist  bleTones.jucer  bleTonesApp.swift  bleTonessApp.swift
bleTones.xcodeproj/: project.pbxproj
bleTones.xcodeproj/project.xcworkspace/xcshareddata/: WorkspaceSettings.xcsettings
bleTones/Models/: DeviceMapping.swift  DiscoveredDevice.swift  KnownDevice.swift  MIDIDestinationInfo.swift
bleTones/Services/: AudioEngineManager.swift  BLECentral.swift  DeviceStore.swift  MIDIManager.swift  UpdateCoordinator.swift
bleTones/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
bleTones/Views/: ContentView.swift  DeviceDetailView.swift  DeviceMappingView.swift  MIDIDestinationsPickerView.swift  MappingsListView.swift  ScanView.swift  SettingsView.swift
helper/: CMakeLists.txt  Info.plist
helper/Source/: OSCSender.h  main.mm  main_win.cpp
supercollider/: bridge.py  sines.scd  songly.scd  woods.scd
tools/: README.md  osc_test_sender.py
web/: index.html
